--- a/plan/src/main/resources/application.yml
+++ b/plan/src/main/resources/application.yml
@@ -8,6 +8,6 @@ logging:
 sync:
   amqp:
     plan:
-      exchange: plan.exchange
+      exchange: plan-exchange
     account:
-      exchange: account.exchange
+      exchange: account-exchange
