--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -2,6 +2,11 @@ spring:
   application:
     name: accounts
 
+security:
+  basic:
+    enabled: false
+
+    
 sub:
   dlx: pam-dlx
 
@@ -18,6 +23,9 @@ participant:
       participant-added: pam-participant-added
       participant-enrolled: pam-participant-enrolled
 
+logging:
+  level:
+    com.cognizant : DEBUG
 ---
 spring.profiles: default
 eureka:
@@ -25,7 +33,3 @@ eureka:
     enabled: false
 server:
   port: 9001
-
-logging:
-  level:
-    com.cognizant: DEBUG
