--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -1,13 +1,14 @@
 spring:
   application:
     name: gateway
-
----
-spring.profiles: default
-eureka:
-  client:
+security:
+  basic:
     enabled: false
+
+    
 zuul:
+  ignored-headers: X-none
+  ignore-security-headers: false
   routes:
     spm:
       path: /spm/**
@@ -18,6 +19,13 @@ zuul:
     acm:
       path: /acm/**
       serviceId: account-contrib
+
+---
+spring.profiles: default
+eureka:
+  client:
+    enabled: false
+
 
 ribbon:
   eureka:
