--- a/plan/src/main/resources/application.yml
+++ b/plan/src/main/resources/application.yml
@@ -16,3 +16,10 @@ sync:
       exchange: plan-exchange
     account:
       exchange: account-exchange
+      
+---
+spring.profiles: default
+debug: true
+spring:
+  jpa:
+    database: H2
