--- a/kernel/pom.xml
+++ b/kernel/pom.xml
@@ -41,6 +41,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-webmvc</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-core</artifactId>
 			<scope>provided</scope>
 		</dependency>
