--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,8 @@
 	<description>Demo project for Spring Boot</description>
 
 	<modules>
+		<module>kernel</module>
+		<module>fund</module>
 		<module>participant-management</module>
 		<module>accounts</module>
 		<module>account-contrib</module>
