--- a/fund/src/main/resources/application.yml
+++ b/fund/src/main/resources/application.yml
@@ -6,4 +6,11 @@ spring:
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
-    
+security:
+  basic:
+    enabled: false      
+---
+spring.profiles: default
+eureka:
+  client:
+    enabled: false
