--- a/account-contrib/src/main/resources/application.yml
+++ b/account-contrib/src/main/resources/application.yml
@@ -1,10 +1,17 @@
 spring:
   application:
     name: account-contrib
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
 
 security:
   basic:
     enabled: false
+management:
+  security:
+    enabled: false    
 
 sub:
   dlx: acm-dlx
@@ -25,6 +32,15 @@ participant:
 logging:
   level:
     com.cognizant : DEBUG
+
+---
+spring.profiles: cloud
+eureka:
+  instance:
+    nonSecurePort: 80
+    hostname: ${vcap.application.uris[0]}
+
+
 ---
 spring.profiles: default
 eureka:
