--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -7,8 +7,15 @@ spring:
 security:
   basic:
     enabled: false
+management:
+  security:
+    enabled: false    
 
-    
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+          
 sub:
   dlx: pam-dlx
 
@@ -25,9 +32,22 @@ participant:
       participant-added: pam-participant-added
       participant-enrolled: pam-participant-enrolled
 
+app:
+  name:
+    account-contrib: account-contrib
+    fund: fund
+
 logging:
   level:
     com.cognizant : DEBUG
+---
+spring.profiles: cloud
+eureka:
+  instance:
+    nonSecurePort: 80
+    hostname: ${vcap.application.uris[0]}
+
+  
 ---
 spring.profiles: default
 eureka:
@@ -48,3 +68,10 @@ fund:
   ribbon:
     listOfServers: localhost:9010    
 
+---
+spring.profiles: standalone-eureka
+
+app:
+  name:
+    account-contrib: account-contrib-v1a
+    fund: fund-v1a
