--- a/fund/src/main/resources/application.yml
+++ b/fund/src/main/resources/application.yml
@@ -6,9 +6,25 @@ spring:
   jackson:
     serialization:
       WRITE_DATES_AS_TIMESTAMPS: false
+
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+            
 security:
   basic:
     enabled: false      
+management:
+  security:
+    enabled: false
+---
+spring.profiles: cloud
+eureka:
+  instance:
+    nonSecurePort: 80
+    hostname: ${vcap.application.uris[0]}
+
 ---
 spring.profiles: default
 eureka:
