--- a/gateway/pom.xml
+++ b/gateway/pom.xml
@@ -46,10 +46,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.pivotal.spring.cloud</groupId>
-			<artifactId>spring-cloud-services-starter-service-registry</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>io.pivotal.spring.cloud</groupId> -->
+<!-- 			<artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
+<!-- 		</dependency> -->
 	</dependencies>
 
 	<dependencyManagement>
@@ -61,13 +61,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-				<groupId>io.pivotal.spring.cloud</groupId>
-				<artifactId>spring-cloud-services-dependencies</artifactId>
-				<version>${spring-cloud-services.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
+<!-- 			<dependency> -->
+<!-- 				<groupId>io.pivotal.spring.cloud</groupId> -->
+<!-- 				<artifactId>spring-cloud-services-dependencies</artifactId> -->
+<!-- 				<version>${spring-cloud-services.version}</version> -->
+<!-- 				<type>pom</type> -->
+<!-- 				<scope>import</scope> -->
+<!-- 			</dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
