--- a/participant-management/src/main/resources/application.yml
+++ b/participant-management/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
     serialization:
       write_dates_as_timestamps: false 
       
+eureka:
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+     
 exchanges:
   sponsor: sponsor-exchange
   participant: participant-exchange
@@ -22,7 +27,11 @@ plan:
     plan-exchange: plan-exchange
     queues:
       publish: spm-publish-queue
-  
+
+
+management:
+  security:
+    enabled: false
 security:
   basic:
     enabled: false
@@ -30,10 +39,23 @@ logging:
   level:
     com.cognizant : DEBUG
 ---
+spring.profiles: cloud
+eureka:
+  instance:
+    nonSecurePort: 80
+    hostname: ${vcap.application.uris[0]}
+
+
+---
 spring.profiles: default
 server:
   port: 9000
 eureka:
-  client:
-    enabled: false
+  instance:
+    nonSecurePort: 80
+
+
+#eureka:
+#  client:
+#    enabled: false
     
