--- a/plan/src/main/resources/application.yml
+++ b/plan/src/main/resources/application.yml
@@ -16,6 +16,18 @@ sync:
       exchange: plan-exchange
     account:
       exchange: account-exchange
+
+eureka:
+  instance:
+    nonSecurePort: 80
+    hostname: ${vcap.application.uris[0]}
+  client:
+    service-url:
+      defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+
+management:
+  security:
+    enabled: false
       
 ---
 spring.profiles: default
