--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<modules>
+		<module>eureka</module>
 		<module>kernel</module>
 		<module>fund</module>
 		<module>participant-management</module>
