--- a/participant-management/src/main/resources/application.yml
+++ b/participant-management/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name: participant-management
   jackson:
     serialization:
-      write_dates_as_timestamps: false 
+      WRITE_DATES_AS_TIMESTAMPS: false 
       
 eureka:
   client:
@@ -51,11 +51,6 @@ spring.profiles: default
 server:
   port: 9000
 eureka:
-  instance:
-    nonSecurePort: 80
-
-
-#eureka:
-#  client:
-#    enabled: false
+  client:
+    enabled: false
     
