--- a/account-contrib/pom.xml
+++ b/account-contrib/pom.xml
@@ -52,10 +52,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>io.pivotal.spring.cloud</groupId> -->
-<!-- 			<artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>io.pivotal.spring.cloud</groupId> -->
+		<!-- <artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -95,13 +99,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>io.pivotal.spring.cloud</groupId> -->
-<!-- 				<artifactId>spring-cloud-services-dependencies</artifactId> -->
-<!-- 				<version>1.6.3.RELEASE</version> -->
-<!-- 				<type>pom</type> -->
-<!-- 				<scope>import</scope> -->
-<!-- 			</dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>io.pivotal.spring.cloud</groupId> -->
+			<!-- <artifactId>spring-cloud-services-dependencies</artifactId> -->
+			<!-- <version>1.6.3.RELEASE</version> -->
+			<!-- <type>pom</type> -->
+			<!-- <scope>import</scope> -->
+			<!-- </dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
