--- a/accounts/pom.xml
+++ b/accounts/pom.xml
@@ -61,10 +61,14 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>io.pivotal.spring.cloud</groupId> -->
-<!-- 			<artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
-<!-- 		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>io.pivotal.spring.cloud</groupId> -->
+		<!-- <artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
@@ -74,9 +78,9 @@
 			<artifactId>spring-boot-devtools</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		
-		
-		
+
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -93,13 +97,13 @@
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>io.pivotal.spring.cloud</groupId> -->
-<!-- 				<artifactId>spring-cloud-services-dependencies</artifactId> -->
-<!-- 				<version>${spring-cloud-services.version}</version> -->
-<!-- 				<type>pom</type> -->
-<!-- 				<scope>import</scope> -->
-<!-- 			</dependency> -->
+			<!-- <dependency> -->
+			<!-- <groupId>io.pivotal.spring.cloud</groupId> -->
+			<!-- <artifactId>spring-cloud-services-dependencies</artifactId> -->
+			<!-- <version>${spring-cloud-services.version}</version> -->
+			<!-- <type>pom</type> -->
+			<!-- <scope>import</scope> -->
+			<!-- </dependency> -->
 		</dependencies>
 	</dependencyManagement>
 
