--- a/fund/pom.xml
+++ b/fund/pom.xml
@@ -57,6 +57,10 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-sleuth</artifactId>
+		</dependency>		
 <!-- 		<dependency> -->
 <!-- 			<groupId>io.pivotal.spring.cloud</groupId> -->
 <!-- 			<artifactId>spring-cloud-services-starter-service-registry</artifactId> -->
