--- a/accounts/src/main/resources/application.yml
+++ b/accounts/src/main/resources/application.yml
@@ -39,7 +39,10 @@ app:
 
 logging:
   level:
+    org: WARN 
+    com.netflix: WARN 
     com.cognizant : DEBUG
+
 ---
 spring.profiles: cloud
 eureka:
