--- a/fund/src/main/resources/application.yml
+++ b/fund/src/main/resources/application.yml
@@ -11,6 +11,12 @@ eureka:
   client:
     service-url:
       defaultZone: ${EUREKA_URI:http://localhost:8761/eureka}
+      
+logging:
+  level:
+    org: WARN 
+    com.netflix: WARN 
+    com.cognizant : DEBUG    
             
 security:
   basic:
